* The "Apply automatic substitutions on page load" item in the Tools menu is correctly initialized.
* Column widths and order are saved.
* Added checks to prevent saving substitutions with invalid regular expressions (#223, #236).
* Substitution groups can be edited with double click (#226).
* The Delete key no longer removes the whole substitution while it's being edited (#226).
* Updated ag-Grid to version 14.2.0.

v2.1.0 (2017-11-28)
* Added 3 modes for substitution groups (#206):
  - auto: used in auto-replace on load and auto-replace every n seconds
  - manual: used when manually applying the substitution list
  - auto&manual (default): used in both cases, equivalent to previous versions
* New list format 2.1 to include the mode.
* Dropped support for substitution lists in the 0.13 format.
* Context menu is now optional (#229).
* Fixed header names in substitutions tab in options.
* Fixed apply substitution list from the Tools menu (#230).
* Correct shortcuts shown in the toolbar button menu on all platforms (#230).

v2.0.0 (2017-10-13)
* Finished conversion to WebExtension.
* Replace bar has been transformed into a sidebar until WebExtensions support toolbars.
* Enabled translation.
* Fixed bug about the subscription warning not showing sometimes.
* Fixed bug related to subscription causing it to update very fast forever.
* Fixed export (#222).
* DOMParser is used instead of innerHTML.
* Compatibility with Firefox 57 and later.

v1.1.3 (2017-08-28)
* Corrected a wrong string.
* Added a warning about potential security and privacy issues when using subscription.

v1.1.2 (2017-08-17)
* Fixed another bug in v1.1.0 in which the replace bar didn't follow current preferences.

v1.1.1 (2017-08-17)
* Fixed a bug introduced in v1.1.0 in which the input type was not properly saved.
* Compatibility with Firefox 55 and 56.

v1.1.0 (2017-07-30)
* Substitutions are applied when the main page has loaded, without waiting for other resources.