@@ -142,6 +142,18 @@
     "message": "Desa"
   },
 
+  "options.confirmClearGroups.content": {
+    "message": "Es buidarà la llista de substitucions. N'esteu segur?"
+  },
+
+  "options.confirmClearGroups.clear": {
+    "message": "Buida"
+  },
+
+  "options.confirmClearGroups.cancel": {
+    "message": "Cancel·la"
+  },
+
   "options.importAndAppend": {
     "message": "Importa i afegeix"
   },
