@@ -142,6 +142,18 @@
     "message": "Save"
   },
 
+  "options.confirmClearGroups.content": {
+    "message": "This will clear the whole list. Are you sure?"
+  },
+
+  "options.confirmClearGroups.clear": {
+    "message": "Clear"
+  },
+
+  "options.confirmClearGroups.cancel": {
+    "message": "Cancel"
+  },
+
   "options.importAndAppend": {
     "message": "Import and append"
   },
