@@ -3,6 +3,7 @@
 * Added checks to prevent saving substitutions with invalid regular expressions (#223, #236).
 * Substitution groups can be edited with double click (#226).
 * The Delete key no longer removes the whole substitution while it's being edited (#226).
+* Added a confirmation before clearing the substitution list and moved the clear button to the right end.
 * Updated ag-Grid to version 14.2.0.
 
 v2.1.0 (2017-11-28)
